--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,10 @@
             <artifactId>google-http-client-jackson2</artifactId>
             <version>1.46.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
