--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,23 @@ server:
 spring:
   application:
     name: academai
+    # Конфигурация сервиса электронной почты
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    protocol: smtp
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: false
+        debug: true
+
+
+
 
 
   datasource:
